--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@astrojs/check": "0.4.1",
     "astro": "4.3.2",
+    "firebase-tools": "^13.24.0",
     "hotkeypad": "0.1.0",
     "typescript": "5.3.3"
   }
